<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF0">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:http="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_meeting_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.MeetingDetailActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/meeting_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:paddingEnd="16dp"
                    app:menu="@menu/menu_detail"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                    app:navigationIconTint="@color/white"
                    app:title="Ma Réu"
                    app:titleTextColor="@color/white" />
            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/meeting_room_image"
                        android:layout_width="260dp"
                        android:layout_height="260dp"
                        android:src="@drawable/ic_room_neptune" />

                    <TextView
                        android:id="@+id/meeting_room_name_1"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_marginTop="-153dp"
                        android:gravity="center"
                        android:text="Room name"
                        android:textSize="32sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="30dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        http:cardBackgroundColor="@android:color/white"
                        http:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/meeting_topic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:text="Topic"
                                android:textColor="@color/black"
                                android:textSize="26sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:background="#ECEFF0" />

                            <TextView
                                android:id="@+id/meeting_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                                android:drawablePadding="10dp"
                                android:paddingStart="16dp"
                                android:text="Date" />

                            <TextView
                                android:id="@+id/meeting_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:drawableLeft="@drawable/ic_baseline_access_time_24"
                                android:drawablePadding="10dp"
                                android:paddingStart="16dp"
                                android:text="Time" />

                            <TextView
                                android:id="@+id/meeting_room_name_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                                android:drawablePadding="10dp"
                                android:paddingStart="16dp"
                                android:text="Room" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:background="#ECEFF0" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:text="Participants:"
                                android:textColor="@color/black"
                                android:textSize="26sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:background="#ECEFF0" />

                            <TextView
                                android:id="@+id/meeting_participants_list"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:paddingStart="16dp"
                                android:text="Liste des participants..." />

                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>